--- a/feed.njk
+++ b/feed.njk
@@ -1,6 +1,7 @@
 ---
 permalink: feed.xml
 ---
+
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
   <title>{{ siteMeta.author.name }}</title>
@@ -20,8 +21,8 @@ permalink: feed.xml
       <link href="{{ absolutePostUrl }}"/>
       <updated>{{ post.date | rssDate }}</updated>
       <id>{{ absolutePostUrl }}</id>
-      <content type="html">{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}
-        &lt;hr/&gt; &lt;p&gt;&lt;a href=&#39;mailto:arpitbatra123@gmail.com?subject=Reply: {{post.data.title}}&#39;&gt;Reply via email&lt;/a&gt; &lt;/p&gt;
+      <content type="html">{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }} &lt;hr/&gt; &lt;p&gt;&lt;a href=&#39;mailto:arpitbatra123@gmail.com?subject=Reply: {{ post.data.title }}
+        &#39;&gt;Reply via email&lt;/a&gt; &lt;/p&gt;
       </content>
     </entry>
   {%- endfor %}
