--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1,18 +1,18 @@
 /* ibm-plex-sans-regular - latin */
 @font-face {
-  font-family: "IBM Plex Sans";
+  font-family: 'IBM Plex Sans';
   font-style: normal;
   font-weight: 400;
-  src: local(""), url("../assets/fonts/ibm-plex-sans-v8-latin-regular.woff2") format("woff2"),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */ url("../assets/fonts/ibm-plex-sans-v8-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  src: local(''), url('../assets/fonts/ibm-plex-sans-v8-latin-regular.woff2') format('woff2'),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */ url('../assets/fonts/ibm-plex-sans-v8-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 /* ibm-plex-sans-700 - latin */
 @font-face {
-  font-family: "IBM Plex Sans";
+  font-family: 'IBM Plex Sans';
   font-style: normal;
   font-weight: 700;
-  src: local(""), url("../assets/fonts/ibm-plex-sans-v8-latin-700.woff2") format("woff2"),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */ url("../assets/fonts/ibm-plex-sans-v8-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  src: local(''), url('../assets/fonts/ibm-plex-sans-v8-latin-700.woff2') format('woff2'),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */ url('../assets/fonts/ibm-plex-sans-v8-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 ::selection {
@@ -31,13 +31,15 @@
 }
 
 body {
-  font-family: "IBM Plex Sans", sans-serif;
+  font-family: 'IBM Plex Sans', sans-serif;
   color: #394655;
   background: #fffef7;
 }
 
 .container {
-  margin: 40px 32%;
+  max-width: 720px;
+  padding: 0 1rem;
+  margin: 40px auto;
   blockquote {
     margin: 16px 0;
     padding: 0 1em;
@@ -53,11 +55,5 @@ a {
   &:hover {
     cursor: pointer;
     text-decoration: underline;
-  }
-}
-
-@media (min-width: 320px) and (max-width: 767px) {
-  .container {
-    margin: 32px 14%;
   }
 }
